# openapi/openapi.json
@@ -4461,7 +4461,10 @@
                 "scope_type": {
                   "type": "string"
                 },
-                "scope_id": {
+                "scope_value": {
+                  "type": "string"
+                },
+                "scope_enum_value": {
                   "type": "string"
                 }
               }
